// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model user {
  id         String    @id @default(uuid())
  email      String    @unique
  password   String?
  google_id  String?   @unique
  token      String?
  avatar_url String?
  last_login DateTime?
  created_at DateTime  @default(now())
  updated_at DateTime  @updatedAt

  profile                user_profile?
  skills                 user_skill[]
  recommendation_history recommendation_history[]
}

model user_profile {
  id              String   @id @default(uuid())
  user_id         String   @unique
  education_level String
  major           String
  gpa             Decimal? @db.Decimal(3, 2)
  updated_at      DateTime @updatedAt

  user user @relation(fields: [user_id], references: [id])
}

model skill {
  id   String @id @default(uuid())
  name String @unique

  user_skills user_skill[]
  career_skills career_skill[]
}

model career {
  id          String  @id @default(uuid())
  title       String  @unique
  description String?
  industry    String?

  recommendation_history recommendation_history[]
  career_skills career_skill[]
}

model user_skill {
  user_id  String
  skill_id String

  user  user  @relation(fields: [user_id], references: [id])
  skill skill @relation(fields: [skill_id], references: [id])

  @@id([user_id, skill_id])
}

model recommendation_history {
  id          String   @id @default(uuid())
  user_id     String
  career_id   String
  match_score Decimal? @db.Decimal(5, 2)
  created_at  DateTime @default(now())

  user   user   @relation(fields: [user_id], references: [id])
  career career @relation(fields: [career_id], references: [id])
}

model career_skill {
  career_id String
  skill_id String

  career  career @relation(fields: [career_id], references: [id])
  skill   skill  @relation(fields: [skill_id], references: [id])

  @@id([career_id, skill_id])
}
